syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTPendingBailment";
option optimize_for = LITE_RUNTIME;

message PendingBailment {
    optional uint32 version = 1;
    optional string unitID = 2;
    optional string serverID = 3;
    optional string txid = 4;
    optional string requestID = 5;
}
